<resources>
    <string name="app_name">My ToDos</string>
    <string name="welcomeMessage1">Welcome to MAD S22</string>
    <string name="welcomeMessage2">Welcome again</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="checked">checked?</string>
    <string name="favourite">favourite?</string>
    <string name="delete">delete</string>
</resources>
