<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="org.dieschnittstelle.mobile.android.skeleton.DetailViewActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:hintEnabled="true"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:error ="@{viewmodel.errorStatus}"
                android:onFocusChange="@{(view, hasFocus) -> viewmodel.checkedFieldInputCompleted(view,-1,hasFocus,true )}"
                android:onEditorAction="@{(view, actionId, event) -> viewmodel.checkedFieldInputCompleted(view,actionId,false, false)}"
                android:text="@={viewmodel.item.name}"
                android:onTextChanged="@{(a,b,c,d) -> viewmodel.onNameFieldInputChanged()}"
                >

                <requestFocus />
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/itemChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={viewmodel.item.checked}"
            android:text="@string/checked"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemNameWrapper">
        </com.google.android.material.checkbox.MaterialCheckBox>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/itemFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={viewmodel.item.favourite}"
            android:text="@string/favourite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemChecked">

        </com.google.android.material.checkbox.MaterialCheckBox>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemDescriptionWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/itemFavourite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:lines="10"
                android:minLines="5"
                android:text="@={viewmodel.item.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvSelectedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnDate"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="italic|bold"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/itemDescriptionWrapper"/>

        <Button
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:onClick="@{() -> viewmodel.onShowDatePicker()}"
            android:text="Select a date"
            android:textColor="@android:color/white"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectedDate"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewmodel.onSaveItem()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/baseline_save_white_24dp" />

        <Button
            android:id="@+id/delete"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="150dp"
            android:onClick="@{() -> viewmodel.onDeleteItem()}"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>